@startuml
skinparam classAttributeIconSize 0

class UserModel {
  +String id
  +String name
  +String phone
  +int creditScore
  +UserRole role
}

class TripModel {
  +String id
  +String routeName
  +String origin
  +String destination
  +String vehicleId
  +String driverId
  +DateTime departureTime
  +int totalSeats
  +int bookedSeats
  +double fare
  +TripStatus status
  +bool isBookable
}

class BookingModel {
  +String id
  +String userId
  +String tripId
  +int seatNo
  +BookingStatus status
  +double fare
  +BookingPaymentStatus paymentStatus
  +int creditPenalty
}

class PaymentModel {
  +String id
  +String bookingId
  +double amount
  +PaymentMethod method
  +PaymentStatus status
}

class DriverTaskModel {
  +String id
  +String tripNo
  +String routeName
  +String vehicleId
  +String plateNo
  +double distanceKm
  +DriverTaskStatus status
}

class PassengerPickup {
  +String name
  +String phoneSuffix
  +String pickupPoint
  +int seatNo
}

class LocationUpdate {
  +String vehicleId
  +double lat
  +double lng
  +double speed
  +DateTime timestamp
}

class VehicleModel {
  +String id
  +String plateNo
  +String model
  +int seatCount
  +VehicleStatus status
}

class AdminDriverModel {
  +String id
  +String name
  +String phone
  +String licenseNo
  +String? boundVehicleId
}

class DispatchDemandModel {
  +String id
  +String routeName
  +String origin
  +String destination
  +int passengerCount
  +DateTime departureTime
  +DispatchDemandStatus status
}

class DispatchPlanModel {
  +String id
  +String demandId
  +String vehicleId
  +String driverId
  +double loadRate
  +bool isAiGenerated
  +bool isConfirmed
}

class VehicleLocationModel {
  +String vehicleId
  +String tripNo
  +String driverId
  +double lat
  +double lng
  +double speed
}

class AdminAnalyticsSnapshot {
  +AnalyticsPeriod period
  +int totalPassengers
  +double totalRevenue
  +double vehicleUtilization
}

UserModel "1" -- "0..*" BookingModel : creates
TripModel "1" -- "0..*" BookingModel : contains
BookingModel "1" -- "0..1" PaymentModel : paid by
DriverTaskModel "1" -- "0..*" PassengerPickup : includes
DriverTaskModel "1" -- "0..*" LocationUpdate : reports
VehicleModel "1" -- "0..1" AdminDriverModel : bound
VehicleModel "1" -- "0..1" VehicleLocationModel : location
DispatchDemandModel "1" -- "0..1" DispatchPlanModel : assigned by
DispatchPlanModel "1" -- "1" VehicleModel : uses
DispatchPlanModel "1" -- "1" AdminDriverModel : uses
@enduml
